CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}")
INCLUDE_ERDIR(${CMAKE_MODULE_PATH}/src/couchdb)

SET(CMAKE_ERL_LIB_INSTALL_PREFIX "lib/couchdb/erlang/lib")

ADD_SUBDIRECTORY(src/couchdb)
ADD_SUBDIRECTORY(src/lhttpc)
ADD_SUBDIRECTORY(src/couch_set_view)
ADD_SUBDIRECTORY(src/couch_index_merger)
ADD_SUBDIRECTORY(src/couch_view_parser)
ADD_SUBDIRECTORY(src/mapreduce)
ADD_SUBDIRECTORY(src/snappy)
ADD_SUBDIRECTORY(src/erlang-oauth)
ADD_SUBDIRECTORY(src/ejson)
ADD_SUBDIRECTORY(src/mochiweb)
ADD_SUBDIRECTORY(src/etap)
