FILE(GLOB SRC *.erl)
SET(COUCH_VIEW_SNAPPY_SRC snappy_nif.cc)
SET(COUCH_SNAPPY_VERSION "1.0.4")
SET(COUCH_SNAPPY_PREFIX ${CMAKE_ERL_LIB_INSTALL_PREFIX}/snappy-${COUCH_SNAPPY_VERSION})
SET(COUCH_SNAPPY_EBIN_PREFIX ${COUCH_SNAPPY_PREFIX}/ebin)
SET(COUCH_SNAPPY_PRIV_PREFIX ${COUCH_SNAPPY_PREFIX}/priv)

INCLUDE_DIRECTORIES(BEFORE ${CMAKE_CURRENT_SOURCE_DIR}
                           ${CMAKE_CURRENT_SOURCE_DIR}
                           ${CMAKE_CURRENT_SOURCE_DIR}/../..
                           ${SNAPPY_INCLUDE_DIR}
                           ${CMAKE_INSTALL_PREFIX}/lib/erlang/usr/include
                           ${ERLANG_INCLUDE_PATH})

ADD_LIBRARY(snappy_nif MODULE ${COUCH_VIEW_SNAPPY_SRC})
TARGET_LINK_LIBRARIES(snappy_nif ${SNAPPY_LIBRARIES}
                                 ${COUCHBASE_MATH_LIBS})

ERL_BUILD("snappy" ${SRC})

INSTALL(TARGETS snappy_nif
    DESTINATION ${COUCH_SNAPPY_PRIV_PREFIX})

INSTALL(FILES ${outfiles}
    DESTINATION ${COUCH_SNAPPY_EBIN_PREFIX})
